Updated index links to have new colors and icons

--- a/campaign/characters/index.html
+++ b/campaign/characters/index.html
@@ -51,12 +51,16 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="non-player/index.html">
+     <a class="dir-index-link" href="non-player/index.html">
+      <i class="fas fa-folder">
+      </i>
       non-player
      </a>
     </li>
     <li>
-     <a href="player/index.html">
+     <a class="dir-index-link" href="player/index.html">
+      <i class="fas fa-folder">
+      </i>
       player
      </a>
     </li>
