--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -177,126 +177,176 @@
     </li>
     <li>
      <a class="image-index-link" href="img/alexander_whitmore.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/alexander_whitmore.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/amon_raheem.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/amon_raheem.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/aria_thistlewood.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/aria_thistlewood.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/arlo_ironheart.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/arlo_ironheart.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/astrid_windrider.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/astrid_windrider.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/cedric_blackthorn.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/cedric_blackthorn.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/corvus_stormrider.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/corvus_stormrider.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/draven_fireclaw.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/draven_fireclaw.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/elara_nightshade.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/elara_nightshade.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/elric_nightingale.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/elric_nightingale.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/elysia_moonwhisper.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/elysia_moonwhisper.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/isabella_shadowbrook.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/isabella_shadowbrook.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/kaelar_stormcaller.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/kaelar_stormcaller.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lirael_forestwind.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lirael_forestwind.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lyra_silverwind.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lyra_silverwind.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/maximus_stormweaver.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/maximus_stormweaver.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/roderick_thornfield.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/roderick_thornfield.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/roland_swiftwind.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/roland_swiftwind.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/seraphina_lightbringer.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/seraphina_lightbringer.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/seraphina_thornvale.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/seraphina_thornvale.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silas_shadowvale.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silas_shadowvale.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/thorin_stonehammer.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/thorin_stonehammer.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/thorne_ironfist.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/thorne_ironfist.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/valen_shadowborn.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/valen_shadowborn.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/zadarin_stard_iro.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/zadarin_stard_iro.jpg
      </a>
     </li>
