--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -87,131 +87,183 @@
     </li>
     <li>
      <a class="image-index-link" href="img/mossback_treant (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mossback_treant (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mossback_treant (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mossback_treant (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mossback_treant (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mossback_treant (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mossback_treant (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mossback_treant (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/oasis_dwellers (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/oasis_dwellers (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/oasis_dwellers (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/oasis_dwellers (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/oasis_dwellers (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/oasis_dwellers (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/oasis_dwellers (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/oasis_dwellers (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_whisperers (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_whisperers (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_whisperers (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_whisperers (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_whisperers (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_whisperers (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sandstriders (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sandstriders (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sandstriders (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sandstriders (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sandstriders (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sandstriders (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sandstriders (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sandstriders (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shadowclaw_panther (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shadowclaw_panther (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shadowclaw_panther (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shadowclaw_panther (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shadowclaw_panther (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shadowclaw_panther (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shadowclaw_panther (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shadowclaw_panther (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_serpents (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_serpents (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_serpents (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_serpents (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_serpents (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_serpents (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_owl (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_owl (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_owl (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_owl (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_owl (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_owl (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_owl (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_owl (4).jpg
      </a>
     </li>
