--- a/campaign/creatures/index.html
+++ b/campaign/creatures/index.html
@@ -51,12 +51,16 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="animals/index.html">
+     <a class="dir-index-link" href="animals/index.html">
+      <i class="fas fa-folder">
+      </i>
       animals
      </a>
     </li>
     <li>
-     <a href="monsters/index.html">
+     <a class="dir-index-link" href="monsters/index.html">
+      <i class="fas fa-folder">
+      </i>
       monsters
      </a>
     </li>
