--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/stoneshaper_golem.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/stoneshaper_golem.jpg
      </a>
     </li>
