--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -132,331 +132,463 @@
     </li>
     <li>
      <a class="image-index-link" href="img/desert_sage (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/desert_sage (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/desert_sage (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/desert_sage (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/desert_sage (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/desert_sage (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/desert_sage (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/desert_sage (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/emberroot (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/emberroot (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/emberroot (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/emberroot (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostbloom (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostbloom (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostbloom (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostbloom (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostbloom (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostbloom (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostbloom (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostbloom (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostvine (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostvine (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostvine (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostvine (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostvine (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostvine (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/frostvine (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/frostvine (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mirage_cacti (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mirage_cacti (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mirage_cacti (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mirage_cacti (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/mirage_cacti (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/mirage_cacti (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/moonshadow_herb (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/moonshadow_herb (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/moonshadow_herb (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/moonshadow_herb (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/moonshadow_herb (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/moonshadow_herb (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/moonshadow_herb (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/moonshadow_herb (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_blossom (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_blossom (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_blossom (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_blossom (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_blossom (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_blossom (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_blossom (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_blossom (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_dune_lily (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_dune_lily (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_dune_lily (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_dune_lily (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_dune_lily (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_dune_lily (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sand_dune_lily (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sand_dune_lily (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shimmering_wheat (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shimmering_wheat (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shimmering_wheat (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shimmering_wheat (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shimmering_wheat (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shimmering_wheat (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/shimmering_wheat (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/shimmering_wheat (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_fruit (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_fruit (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_fruit (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_fruit (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_orchard (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_orchard (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_orchard (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_orchard (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_orchard (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_orchard (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/silverleaf_orchard (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/silverleaf_orchard (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/starbloom_blossom (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/starbloom_blossom (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/starbloom_blossom (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/starbloom_blossom (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/starbloom_blossom (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/starbloom_blossom (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/starbloom_blossom (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/starbloom_blossom (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_cactus (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_cactus (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_cactus (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_cactus (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_cactus (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_cactus (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_cactus (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_cactus (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_grains (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_grains (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_grains (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_grains (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/sunfire_grains (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/sunfire_grains (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine_berries (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine_berries (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine_berries (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine_berries (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/twilight_vine_berries (5).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/twilight_vine_berries (5).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/velvet_blossom (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/velvet_blossom (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/velvet_blossom (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/velvet_blossom (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/velvet_blossom (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/velvet_blossom (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/velvet_blossom (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/velvet_blossom (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whisperleaf (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whisperleaf (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whisperleaf (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whisperleaf (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whisperleaf (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whisperleaf (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whisperleaf (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whisperleaf (4).jpg
      </a>
     </li>
