--- a/campaign/items/consumables/index.html
+++ b/campaign/items/consumables/index.html
@@ -51,22 +51,30 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="drink/index.html">
+     <a class="dir-index-link" href="drink/index.html">
+      <i class="fas fa-folder">
+      </i>
       drink
      </a>
     </li>
     <li>
-     <a href="food/index.html">
+     <a class="dir-index-link" href="food/index.html">
+      <i class="fas fa-folder">
+      </i>
       food
      </a>
     </li>
     <li>
-     <a href="herbs/index.html">
+     <a class="dir-index-link" href="herbs/index.html">
+      <i class="fas fa-folder">
+      </i>
       herbs
      </a>
     </li>
     <li>
-     <a href="potions/index.html">
+     <a class="dir-index-link" href="potions/index.html">
+      <i class="fas fa-folder">
+      </i>
       potions
      </a>
     </li>
