--- a/campaign/items/index.html
+++ b/campaign/items/index.html
@@ -51,42 +51,58 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="armor/index.html">
+     <a class="dir-index-link" href="armor/index.html">
+      <i class="fas fa-folder">
+      </i>
       armor
      </a>
     </li>
     <li>
-     <a href="consumables/index.html">
+     <a class="dir-index-link" href="consumables/index.html">
+      <i class="fas fa-folder">
+      </i>
       consumables
      </a>
     </li>
     <li>
-     <a href="devices/index.html">
+     <a class="dir-index-link" href="devices/index.html">
+      <i class="fas fa-folder">
+      </i>
       devices
      </a>
     </li>
     <li>
-     <a href="magic/index.html">
+     <a class="dir-index-link" href="magic/index.html">
+      <i class="fas fa-folder">
+      </i>
       magic
      </a>
     </li>
     <li>
-     <a href="quest/index.html">
+     <a class="dir-index-link" href="quest/index.html">
+      <i class="fas fa-folder">
+      </i>
       quest
      </a>
     </li>
     <li>
-     <a href="treasure/index.html">
+     <a class="dir-index-link" href="treasure/index.html">
+      <i class="fas fa-folder">
+      </i>
       treasure
      </a>
     </li>
     <li>
-     <a href="trinkets/index.html">
+     <a class="dir-index-link" href="trinkets/index.html">
+      <i class="fas fa-folder">
+      </i>
       trinkets
      </a>
     </li>
     <li>
-     <a href="weapons/index.html">
+     <a class="dir-index-link" href="weapons/index.html">
+      <i class="fas fa-folder">
+      </i>
       weapons
      </a>
     </li>
