--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -57,21 +57,29 @@
     </li>
     <li>
      <a class="image-index-link" href="img/temporal_cyrex_crystals (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/temporal_cyrex_crystals (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/temporal_cyrex_crystals (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/temporal_cyrex_crystals (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/temporal_cyrex_crystals (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/temporal_cyrex_crystals (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/temporal_cyrex_crystals (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/temporal_cyrex_crystals (4).jpg
      </a>
     </li>
