--- a/campaign/items/treasure/index.html
+++ b/campaign/items/treasure/index.html
@@ -57,21 +57,29 @@
     </li>
     <li>
      <a class="image-index-link" href="img/cyrex_gems (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/cyrex_gems (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/cyrex_gems (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/cyrex_gems (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/cyrex_gems (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/cyrex_gems (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/cyrex_gems (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/cyrex_gems (4).jpg
      </a>
     </li>
