--- a/campaign/locations/index.html
+++ b/campaign/locations/index.html
@@ -51,42 +51,58 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="cities/index.html">
+     <a class="dir-index-link" href="cities/index.html">
+      <i class="fas fa-folder">
+      </i>
       cities
      </a>
     </li>
     <li>
-     <a href="dungeons/index.html">
+     <a class="dir-index-link" href="dungeons/index.html">
+      <i class="fas fa-folder">
+      </i>
       dungeons
      </a>
     </li>
     <li>
-     <a href="landmarks/index.html">
+     <a class="dir-index-link" href="landmarks/index.html">
+      <i class="fas fa-folder">
+      </i>
       landmarks
      </a>
     </li>
     <li>
-     <a href="maps/index.html">
+     <a class="dir-index-link" href="maps/index.html">
+      <i class="fas fa-folder">
+      </i>
       maps
      </a>
     </li>
     <li>
-     <a href="planes/index.html">
+     <a class="dir-index-link" href="planes/index.html">
+      <i class="fas fa-folder">
+      </i>
       planes
      </a>
     </li>
     <li>
-     <a href="planet/index.html">
+     <a class="dir-index-link" href="planet/index.html">
+      <i class="fas fa-folder">
+      </i>
       planet
      </a>
     </li>
     <li>
-     <a href="regions/index.html">
+     <a class="dir-index-link" href="regions/index.html">
+      <i class="fas fa-folder">
+      </i>
       regions
      </a>
     </li>
     <li>
-     <a href="towns/index.html">
+     <a class="dir-index-link" href="towns/index.html">
+      <i class="fas fa-folder">
+      </i>
       towns
      </a>
     </li>
