--- a/campaign/locations/landmarks/index.html
+++ b/campaign/locations/landmarks/index.html
@@ -102,156 +102,218 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Temple_of_the_Seven_Winds.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Temple_of_the_Seven_Winds.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/crystal_falls (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/crystal_falls (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/crystal_falls (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/crystal_falls (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/crystal_falls (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/crystal_falls (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/crystal_falls (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/crystal_falls (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/dragons_spine (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/dragons_spine (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/dragons_spine (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/dragons_spine (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/dragons_spine (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/dragons_spine (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/echoing_peaks (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/echoing_peaks (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/echoing_peaks (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/echoing_peaks (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/echoing_peaks (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/echoing_peaks (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/echoing_peaks (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/echoing_peaks (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/echoing_peaks (5).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/echoing_peaks (5).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/enclave_of_the_silent_monks (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/enclave_of_the_silent_monks (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/enclave_of_the_silent_monks (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/enclave_of_the_silent_monks (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/enclave_of_the_silent_monks (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/enclave_of_the_silent_monks (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/enclave_of_the_silent_monks (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/enclave_of_the_silent_monks (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/guardians_watchtower.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/guardians_watchtower.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lost_city_of_azurith (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lost_city_of_azurith (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lost_city_of_azurith (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lost_city_of_azurith (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lost_city_of_azurith (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lost_city_of_azurith (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/lost_city_of_azurith (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/lost_city_of_azurith (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/serpents_pass.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/serpents_pass.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/veil_of_whispers (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/veil_of_whispers (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/veil_of_whispers (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/veil_of_whispers (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/veil_of_whispers (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/veil_of_whispers (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/veil_of_whispers (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/veil_of_whispers (4).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_caverns (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_caverns (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_caverns (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_caverns (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_caverns (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_caverns (3).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/whispering_caverns (4).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/whispering_caverns (4).jpg
      </a>
     </li>
