--- a/campaign/locations/planet/index.html
+++ b/campaign/locations/planet/index.html
@@ -51,17 +51,23 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="continents/index.html">
+     <a class="dir-index-link" href="continents/index.html">
+      <i class="fas fa-folder">
+      </i>
       continents
      </a>
     </li>
     <li>
-     <a href="oceans/index.html">
+     <a class="dir-index-link" href="oceans/index.html">
+      <i class="fas fa-folder">
+      </i>
       oceans
      </a>
     </li>
     <li>
-     <a href="seas/index.html">
+     <a class="dir-index-link" href="seas/index.html">
+      <i class="fas fa-folder">
+      </i>
       seas
      </a>
     </li>
