--- a/campaign/locations/regions/Matella/Alderpine/index.html
+++ b/campaign/locations/regions/Matella/Alderpine/index.html
@@ -72,16 +72,22 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Alderpine.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Alderpine.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Riava_Plateau.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Riava_Plateau.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Talleril.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Talleril.jpg
      </a>
     </li>
