--- a/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Aldor_Sovereign.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Aldor_Sovereign.jpg
      </a>
     </li>
