--- a/campaign/locations/regions/Matella/Daystone_Isle/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Daystone_Isle.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Daystone_Isle.jpg
      </a>
     </li>
