--- a/campaign/locations/regions/Matella/Eldara/index.html
+++ b/campaign/locations/regions/Matella/Eldara/index.html
@@ -62,11 +62,15 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Eldara.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Eldara.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Sifariato_Mountains.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Sifariato_Mountains.jpg
      </a>
     </li>
