--- a/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Gharoni_Highlands.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Gharoni_Highlands.jpg
      </a>
     </li>
