--- a/campaign/locations/regions/Matella/Mentassa_Plains/index.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/index.html
@@ -62,6 +62,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Mentassa_Plains.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Mentassa_Plains.jpg
      </a>
     </li>
