--- a/campaign/locations/regions/Matella/Tinco_Merz/index.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/index.html
@@ -57,16 +57,22 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Stoneridge_Plateau.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Stoneridge_Plateau.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Tinco_Merz.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Tinco_Merz.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Volcanic_Plateau.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Volcanic_Plateau.jpg
      </a>
     </li>
