--- a/campaign/locations/regions/Matella/Zenitha/index.html
+++ b/campaign/locations/regions/Matella/Zenitha/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Zenitha.png">
+      <i class="fas fa-camera">
+      </i>
       img/Zenitha.png
      </a>
     </li>
