--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
@@ -62,11 +62,15 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Gostee_Wilderness.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Gostee_Wilderness.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Zhu_Lang_Dynasty.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Zhu_Lang_Dynasty.jpg
      </a>
     </li>
