--- a/campaign/locations/regions/Matella/index.html
+++ b/campaign/locations/regions/Matella/index.html
@@ -51,107 +51,147 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Alderpine/index.html">
-      Alderpine
-     </a>
-    </li>
-    <li>
-     <a href="Aldor_Sovereign/index.html">
-      Aldor Sovereign
-     </a>
-    </li>
-    <li>
-     <a href="Bakaria/index.html">
-      Bakaria
-     </a>
-    </li>
-    <li>
-     <a href="Daystone_Isle/index.html">
-      Daystone Isle
-     </a>
-    </li>
-    <li>
-     <a href="Elda_Reem_Passlands/index.html">
-      Elda Reem Passlands
-     </a>
-    </li>
-    <li>
-     <a href="Eldara/index.html">
-      Eldara
-     </a>
-    </li>
-    <li>
-     <a href="Gharoni_Highlands/index.html">
-      Gharoni Highlands
-     </a>
-    </li>
-    <li>
-     <a href="Loch_Modar/index.html">
-      Loch Modar
-     </a>
-    </li>
-    <li>
      <a href="Matella.html">
       Matella
      </a>
     </li>
     <li>
-     <a href="Mentassa_Plains/index.html">
+     <a class="dir-index-link" href="Alderpine/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Alderpine
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Aldor_Sovereign/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Aldor Sovereign
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Bakaria/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Bakaria
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Daystone_Isle/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Daystone Isle
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Elda_Reem_Passlands/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Elda Reem Passlands
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Eldara/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Eldara
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Gharoni_Highlands/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Gharoni Highlands
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Loch_Modar/index.html">
+      <i class="fas fa-folder">
+      </i>
+      Loch Modar
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="Mentassa_Plains/index.html">
+      <i class="fas fa-folder">
+      </i>
       Mentassa Plains
      </a>
     </li>
     <li>
-     <a href="The_Ashenlands/index.html">
+     <a class="dir-index-link" href="The_Ashenlands/index.html">
+      <i class="fas fa-folder">
+      </i>
       The Ashenlands
      </a>
     </li>
     <li>
-     <a href="Tinco_Merz/index.html">
+     <a class="dir-index-link" href="Tinco_Merz/index.html">
+      <i class="fas fa-folder">
+      </i>
       Tinco Merz
      </a>
     </li>
     <li>
-     <a href="Visterguarde/index.html">
+     <a class="dir-index-link" href="Visterguarde/index.html">
+      <i class="fas fa-folder">
+      </i>
       Visterguarde
      </a>
     </li>
     <li>
-     <a href="Zenitha/index.html">
+     <a class="dir-index-link" href="Zenitha/index.html">
+      <i class="fas fa-folder">
+      </i>
       Zenitha
      </a>
     </li>
     <li>
-     <a href="Zhu_Lang_Dynasty/index.html">
+     <a class="dir-index-link" href="Zhu_Lang_Dynasty/index.html">
+      <i class="fas fa-folder">
+      </i>
       Zhu Lang Dynasty
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella_Adventure.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella_Adventure.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella_Battlemap.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella_Battlemap.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella_Grayhawk.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella_Grayhawk.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella_Pastal_pro.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella_Pastal_pro.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Matella_labeled.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Matella_labeled.jpg
      </a>
     </li>
