--- a/campaign/locations/regions/index.html
+++ b/campaign/locations/regions/index.html
@@ -51,7 +51,9 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Matella/index.html">
+     <a class="dir-index-link" href="Matella/index.html">
+      <i class="fas fa-folder">
+      </i>
       Matella
      </a>
     </li>
