--- a/campaign/lore/guilds/index.html
+++ b/campaign/lore/guilds/index.html
@@ -67,16 +67,22 @@
     </li>
     <li>
      <a class="image-index-link" href="img/gardeners_guild_crest.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/gardeners_guild_crest.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/tinkers_guild_crest.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/tinkers_guild_crest.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/wanderers_guild_crest.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/wanderers_guild_crest.jpg
      </a>
     </li>
