--- a/campaign/lore/index.html
+++ b/campaign/lore/index.html
@@ -51,47 +51,65 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="backgrounds/index.html">
+     <a class="dir-index-link" href="backgrounds/index.html">
+      <i class="fas fa-folder">
+      </i>
       backgrounds
      </a>
     </li>
     <li>
-     <a href="classes/index.html">
+     <a class="dir-index-link" href="classes/index.html">
+      <i class="fas fa-folder">
+      </i>
       classes
      </a>
     </li>
     <li>
-     <a href="deities/index.html">
+     <a class="dir-index-link" href="deities/index.html">
+      <i class="fas fa-folder">
+      </i>
       deities
      </a>
     </li>
     <li>
-     <a href="factions/index.html">
+     <a class="dir-index-link" href="factions/index.html">
+      <i class="fas fa-folder">
+      </i>
       factions
      </a>
     </li>
     <li>
-     <a href="guilds/index.html">
+     <a class="dir-index-link" href="guilds/index.html">
+      <i class="fas fa-folder">
+      </i>
       guilds
      </a>
     </li>
     <li>
-     <a href="history/index.html">
+     <a class="dir-index-link" href="history/index.html">
+      <i class="fas fa-folder">
+      </i>
       history
      </a>
     </li>
     <li>
-     <a href="languages/index.html">
+     <a class="dir-index-link" href="languages/index.html">
+      <i class="fas fa-folder">
+      </i>
       languages
      </a>
     </li>
     <li>
-     <a href="myths/index.html">
+     <a class="dir-index-link" href="myths/index.html">
+      <i class="fas fa-folder">
+      </i>
       myths
      </a>
     </li>
     <li>
-     <a href="races/index.html">
+     <a class="dir-index-link" href="races/index.html">
+      <i class="fas fa-folder">
+      </i>
       races
      </a>
     </li>
