--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -51,7 +51,9 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="manastorm_legal_advisors/index.html">
+     <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
+      <i class="fas fa-folder">
+      </i>
       manastorm legal advisors
      </a>
     </li>
