--- a/campaign/quests/manastorm_legal_advisors/index.html
+++ b/campaign/quests/manastorm_legal_advisors/index.html
@@ -72,11 +72,15 @@
     </li>
     <li>
      <a class="image-index-link" href="img/contract (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/contract (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/contract (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/contract (2).jpg
      </a>
     </li>
