--- a/campaign/spells/index.html
+++ b/campaign/spells/index.html
@@ -51,52 +51,72 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="level_0/index.html">
+     <a class="dir-index-link" href="level_0/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 0
      </a>
     </li>
     <li>
-     <a href="level_1/index.html">
+     <a class="dir-index-link" href="level_1/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 1
      </a>
     </li>
     <li>
-     <a href="level_2/index.html">
+     <a class="dir-index-link" href="level_2/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 2
      </a>
     </li>
     <li>
-     <a href="level_3/index.html">
+     <a class="dir-index-link" href="level_3/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 3
      </a>
     </li>
     <li>
-     <a href="level_4/index.html">
+     <a class="dir-index-link" href="level_4/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 4
      </a>
     </li>
     <li>
-     <a href="level_5/index.html">
+     <a class="dir-index-link" href="level_5/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 5
      </a>
     </li>
     <li>
-     <a href="level_6/index.html">
+     <a class="dir-index-link" href="level_6/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 6
      </a>
     </li>
     <li>
-     <a href="level_7/index.html">
+     <a class="dir-index-link" href="level_7/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 7
      </a>
     </li>
     <li>
-     <a href="level_8/index.html">
+     <a class="dir-index-link" href="level_8/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 8
      </a>
     </li>
     <li>
-     <a href="level_9/index.html">
+     <a class="dir-index-link" href="level_9/index.html">
+      <i class="fas fa-folder">
+      </i>
       level 9
      </a>
     </li>
