--- a/campaign/spells/level_1/index.html
+++ b/campaign/spells/level_1/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/digested_goodest_berries.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/digested_goodest_berries.jpg
      </a>
     </li>
