--- a/campaign/index.html
+++ b/campaign/index.html
@@ -51,57 +51,79 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="characters/index.html">
+     <a class="dir-index-link" href="characters/index.html">
+      <i class="fas fa-folder">
+      </i>
       characters
      </a>
     </li>
     <li>
-     <a href="creatures/index.html">
+     <a class="dir-index-link" href="creatures/index.html">
+      <i class="fas fa-folder">
+      </i>
       creatures
      </a>
     </li>
     <li>
-     <a href="encounters/index.html">
+     <a class="dir-index-link" href="encounters/index.html">
+      <i class="fas fa-folder">
+      </i>
       encounters
      </a>
     </li>
     <li>
-     <a href="items/index.html">
+     <a class="dir-index-link" href="items/index.html">
+      <i class="fas fa-folder">
+      </i>
       items
      </a>
     </li>
     <li>
-     <a href="locations/index.html">
+     <a class="dir-index-link" href="locations/index.html">
+      <i class="fas fa-folder">
+      </i>
       locations
      </a>
     </li>
     <li>
-     <a href="lore/index.html">
+     <a class="dir-index-link" href="lore/index.html">
+      <i class="fas fa-folder">
+      </i>
       lore
      </a>
     </li>
     <li>
-     <a href="notes/index.html">
+     <a class="dir-index-link" href="notes/index.html">
+      <i class="fas fa-folder">
+      </i>
       notes
      </a>
     </li>
     <li>
-     <a href="puzzles/index.html">
+     <a class="dir-index-link" href="puzzles/index.html">
+      <i class="fas fa-folder">
+      </i>
       puzzles
      </a>
     </li>
     <li>
-     <a href="quests/index.html">
+     <a class="dir-index-link" href="quests/index.html">
+      <i class="fas fa-folder">
+      </i>
       quests
      </a>
     </li>
     <li>
-     <a href="spells/index.html">
+     <a class="dir-index-link" href="spells/index.html">
+      <i class="fas fa-folder">
+      </i>
       spells
      </a>
     </li>
     <li>
-     <a href="timeline/index.html">
+     <a class="dir-index-link" href="timeline/index.html">
+      <i class="fas fa-folder">
+      </i>
       timeline
      </a>
     </li>
