--- a/campaign/items/devices/index.html
+++ b/campaign/items/devices/index.html
@@ -57,16 +57,22 @@
     </li>
     <li>
      <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (1).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/chronolink_nexus_ethereal_pocket_portal (1).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (2).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/chronolink_nexus_ethereal_pocket_portal (2).jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/chronolink_nexus_ethereal_pocket_portal (3).jpg">
+      <i class="fas fa-camera">
+      </i>
       img/chronolink_nexus_ethereal_pocket_portal (3).jpg
      </a>
     </li>
