--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/index.html
@@ -62,21 +62,29 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Elda_Reem_Passlands.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Elda_Reem_Passlands.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Shimmering_Pass.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Shimmering_Pass.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Silithid_Plateau.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Silithid_Plateau.jpg
      </a>
     </li>
     <li>
      <a class="image-index-link" href="img/Utengho_Marshlands.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Utengho_Marshlands.jpg
      </a>
     </li>
