--- a/campaign/locations/regions/Matella/Loch_Modar/index.html
+++ b/campaign/locations/regions/Matella/Loch_Modar/index.html
@@ -57,6 +57,8 @@
     </li>
     <li>
      <a class="image-index-link" href="img/Loch_Modar.jpg">
+      <i class="fas fa-camera">
+      </i>
       img/Loch_Modar.jpg
      </a>
     </li>
