--- a/index.html
+++ b/index.html
@@ -51,32 +51,42 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href=".git/index.html">
-      .git
-     </a>
-    </li>
-    <li>
-     <a href=".idea/index.html">
-      .idea
-     </a>
-    </li>
-    <li>
-     <a href="campaign/index.html">
-      campaign
-     </a>
-    </li>
-    <li>
-     <a href="css/index.html">
-      css
-     </a>
-    </li>
-    <li>
      <a href="mmorpdnd.png">
       mmorpdnd.png
      </a>
     </li>
     <li>
-     <a href="templates/index.html">
+     <a class="dir-index-link" href=".git/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .git
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href=".idea/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .idea
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="campaign/index.html">
+      <i class="fas fa-folder">
+      </i>
+      campaign
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="css/index.html">
+      <i class="fas fa-folder">
+      </i>
+      css
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="templates/index.html">
+      <i class="fas fa-folder">
+      </i>
       templates
      </a>
     </li>
